--- a/package.json
+++ b/package.json
@@ -42,9 +42,8 @@
   "dependencies": {
     "@ctrl/tinycolor": "^3.6.0",
     "ejs": "^3.1.9",
-    "glob": "^10.3.3",
-    "tslib": "^2.3.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.2",
